feat: Add INTERNAL_API_KEY and CRON_API_KEY to .env.example.

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,5 @@ NEXTAUTH_SECRET="next-auth-secret-here"
 NEXTAUTH_URL="http://localhost:3000"
 UPSTASH_REDIS_REST_URL="upstash-redis-url-here"
 UPSTASH_REDIS_REST_TOKEN="upstash-redis-token-here"
+INTERNAL_API_KEY=""
+CRON_API_KEY=""
